--- a/jenkins-server.yml
+++ b/jenkins-server.yml
@@ -12,6 +12,7 @@ services:
       - "8080:8080"
     networks:
       - jenkins-net
+      - minikube
     volumes:
       - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
@@ -22,3 +23,4 @@ volumes:
 
 networks:
   jenkins-net:
+  minikube:
